# speak-vm

./: Cargo.toml
src/: main.rs
src/object/: block.rs  bytecode.rs  interpreter.rs  log.rs  mod.rs  primitive.rs  stack.rs  string.rs  system.rs  vector.rs
src/object/primitive/: boolean.rs  character.rs  float.rs  integer.rs  mod.rs
src/vm/: ;  binary.rs  bytecode.rs  interpreter.rs  mod.rs
