[package]
name = "speak-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
num-traits = "0.2.18"
num-integer = "0.1.46"
log = "0.4.21"
lazy_static = "1.4.0"
nom = "7.1.3"
clap = { version = "=4.5.0", features = ["derive"] }
futures = { version = "0.3.30", features = ["executor", "thread-pool"] }
async-recursion = "1.0.5"
